Localização PT-BR do Rails adicionada

--- a/config/locales/devise.pt-BR.yml
+++ b/config/locales/devise.pt-BR.yml
@@ -4,6 +4,8 @@ pt-BR:
   activerecord:
     attributes:
       user:
+        name: 'Nome'
+        cpf: 'CPF'
         confirmation_sent_at: Confirmação enviada em
         confirmation_token: Token de confirmação
         confirmed_at: Confirmado em
