Problemas nas seeds corrigido, testes de sistema para homepage e sessões/cadastro criados, gera views do devise localmente, configura algumas rotas, views, controllers e assets, atualiza algumas traduções PT-BR do devise

--- a/config/locales/devise.pt-BR.yml
+++ b/config/locales/devise.pt-BR.yml
@@ -107,7 +107,8 @@ pt-BR:
         update: Atualizar
         we_need_your_current_password_to_confirm_your_changes: precisamos da sua senha atual para confirmar suas mudanças
       new:
-        sign_up: Inscrever-se
+        sign_up: Cadastro
+        sign_up_button: Cadastrar
       signed_up: Cadastro realizado com sucesso.
       signed_up_but_inactive: Você se inscreveu com sucesso, porém nós não podemos autenticá-lo porque sua conta ainda não foi ativada.
       signed_up_but_locked: Você se inscreveu com sucesso. Porém nós não podemos autenticá-lo porque sua conta está bloqueada.
@@ -118,7 +119,8 @@ pt-BR:
     sessions:
       already_signed_out: Logout efetuado com sucesso.
       new:
-        sign_in: Login
+        sign_in: Entrar
+        sign_in_button: Entrar
       signed_in: Login efetuado com sucesso.
       signed_out: Logout efetuado com sucesso.
     shared:
@@ -127,7 +129,7 @@ pt-BR:
         didn_t_receive_confirmation_instructions: Não recebeu instruções de confirmação?
         didn_t_receive_unlock_instructions: Não recebeu instruções de desbloqueio?
         forgot_your_password: Esqueceu sua senha?
-        sign_in: Login
+        sign_in: Entrar
         sign_in_with_provider: Entrar com %{provider}
         sign_up: Inscrever-se
       minimum_password_length:
