--- a/config/locales/views/product.pt-BR.yml
+++ b/config/locales/views/product.pt-BR.yml
@@ -4,10 +4,17 @@ pt-BR:
       title: Produtos
       not_found_message: Não existem produtos cadastrados.
     show:
-      linked_to_batch: Vinculado ao lote
+      weight: Peso
+      width: Largura
+      height: Altura
+      depth: Profundidade
+      category: Categoria
+      without_category: Não especificado
+      batch: Lote
+      without_batch: Não vinculado a um lote
       remove_product: Remover Produto
       add_product_to_batch: Vincular Produto a um Lote
-      remove_product_from_batch: Remover Vinculo
+      remove_product_from_batch: Remover Vínculo
     new:
       title: Cadastrar Novo Produto
       submit: Cadastrar
