Algumas colunas das tabelas batches e bids renomeadas para serem mais claras, testes unitários, de sistemas, e arquivos de localização para pt-BR atualizados para responder corretamente aos novos nomes das colunas

--- a/config/locales/models/batch.pt-BR.yml
+++ b/config/locales/models/batch.pt-BR.yml
@@ -9,5 +9,5 @@ pt-BR:
         code: Código
         start_date: Data de Início
         end_date: Data do Fim
-        minimum_bid: Lance Mínimo
-        minimum_difference_between_bids: Diferença Mínima Entre Lances
+        min_bid_in_centavos: Lance Mínimo
+        min_diff_between_bids_in_centavos: Diferença Mínima Entre Lances
