Testes de sistema para aprovação de um lote criado, validação personalizada para verificar a pessoa que vai aprovar um lote criada, views relacionada aos lotes modificada e seeds atualizadas

--- a/config/locales/views/batch.pt-BR.yml
+++ b/config/locales/views/batch.pt-BR.yml
@@ -6,7 +6,8 @@ pt-BR:
       not_found_message: Não existem lotes cadastrados.
     show:
       title: Lote
-      subtitle: Administrado por
+      creator_description: Administrado por
+      approver_description: Aprovado por
       code: Código
       start_date: Data de Início
       end_date: Data do Fim
