--- a/config/locales/views/batch.pt-BR.yml
+++ b/config/locales/views/batch.pt-BR.yml
@@ -15,7 +15,9 @@ pt-BR:
       min_diff_between_bids_in_centavos: Diferença Mínima Entre Lances
       approve_button_text: Aprovar Lote
       linked_products: Produtos do Lote
-      not_found_message: Este lote ainda não possuir nenhum produto.
+      not_found_message: Não existem produtos vinculados a este lote.
+      add_product: Adicionar Produto
+      add_product_button_text: Adicionar
     new:
       title: Cadastrar Novo Lote
       submit: 'Cadastrar'
