Testes de sistema relacionados a listagem de lotes e visualização de detalhes de um lote refatorados, mais uma camada de verificação para o método approver_is_valid? do modelo de lote e um novo caso de teste unitário relacionado a isto criado, mudanças no controller, views e traduções pt-BR relacionados aos lotes

--- a/config/locales/views/batch.pt-BR.yml
+++ b/config/locales/views/batch.pt-BR.yml
@@ -1,9 +1,11 @@
 pt-BR:
   batches:
     index:
-      title: Lotes
+      approved_title: Lotes Aprovados
+      awaiting_approval_title: Lotes Aguardando Aprovação
       prefix: Lote
-      not_found_message: Não existem lotes cadastrados.
+      approved_not_found_message: Não existem lotes cadastrados/aprovados.
+      awaiting_approval_not_found_message: Não existem lotes cadastrados/aguardando aprovação.
     show:
       title: Lote
       creator_description: Administrado por
