Testes de sistema para pagina de detalhes de um produto refatorados, nova frase adicionada para tradução pt-BR de produtos, mudanças na view relacionada aos detalhes de um produto

--- a/config/locales/views/product.pt-BR.yml
+++ b/config/locales/views/product.pt-BR.yml
@@ -13,6 +13,7 @@ pt-BR:
       batch: Lote
       without_batch: Não vinculado a um lote
       product_image: Foto
+      awaiting_approval: Aguardando aprovação
       remove_product: Remover Produto
       link_batch: Vincular Produto a um Lote
       link_batch_button_text: Vincular
