Testes de sistema para página de listagem de lotes modificados, pequenas mudanças/adições no controller, view e traduções pt-BR relacionadas a página de listagem de lotes realizadas

--- a/config/locales/views/batch.pt-BR.yml
+++ b/config/locales/views/batch.pt-BR.yml
@@ -2,9 +2,12 @@ pt-BR:
   batches:
     index:
       approved_title: Lotes Aprovados
+      approved_progress_subtitle: Em Andamento
+      approved_waiting_subtitle: Futuros
       awaiting_approval_title: Lotes Aguardando Aprovação
       prefix: Lote
-      approved_not_found_message: Não existem lotes cadastrados/aprovados.
+      approved_progress_not_found_message: Não existem lotes aprovados em andamento.
+      approved_waiting_not_found_message: Não existem lotes aprovados preparados para o futuro.
       awaiting_approval_not_found_message: Não existem lotes cadastrados/aguardando aprovação.
     show:
       title: Lote
