Unique contraint de value_in_centavos da tabela bids removida. Rotas, testes de sistema, testes unitários, controller e traduções pt-BR relacionados aos lances em lotes criados. Modificações/criações de validações para lotes e lances, modificações de views que tem relações com lances, pequena verificação adicionada na action show do controller de lotes

--- a/config/locales/views/batch.pt-BR.yml
+++ b/config/locales/views/batch.pt-BR.yml
@@ -23,6 +23,10 @@ pt-BR:
       not_found_message: Não existem produtos vinculados a este lote.
       add_product: Adicionar Produto
       add_product_button_text: Adicionar
+      bids: Lances
+      current_winning_bid: Último lance
+      no_bid_value: '0 centavos' 
+      make_bid_button_text: Fazer Lance
     new:
       title: Cadastrar Novo Lote
       submit: 'Cadastrar'
