Novos testes de sistema relacionados a tela de listagem de lotes expirados para admins criados e alguns testes de sistema refatorados. Nova rota e traduções pt-BR relacionadas aos lotes expirados criadas. Mudanças no controller, views e modelo de lote e pequena alteração no modelo de lance

--- a/config/locales/views/batch.pt-BR.yml
+++ b/config/locales/views/batch.pt-BR.yml
@@ -1,14 +1,18 @@
 pt-BR:
   batches:
     index:
+      prefix: Lote
       approved_title: Lotes Aprovados
       approved_progress_subtitle: Em Andamento
       approved_waiting_subtitle: Futuros
       awaiting_approval_title: Lotes Aguardando Aprovação
-      prefix: Lote
       approved_progress_not_found_message: Não existem lotes aprovados em andamento.
       approved_waiting_not_found_message: Não existem lotes aprovados preparados para o futuro.
       awaiting_approval_not_found_message: Não existem lotes cadastrados/aguardando aprovação.
+    expired:
+      prefix: Lote
+      expired_title: Lotes Expirados
+      expired_title_not_found_message: Não existem lotes expirados.
     show:
       title: Lote
       creator_description: Administrado por
