--- a/config/locales/views/batch.pt-BR.yml
+++ b/config/locales/views/batch.pt-BR.yml
@@ -22,7 +22,9 @@ pt-BR:
       end_date: Data do Fim
       min_bid_in_centavos: Lance Mínimo
       min_diff_between_bids_in_centavos: Diferença Mínima Entre Lances
-      approve_button_text: Aprovar Lote
+      approve_batch_button_text: Aprovar Lote
+      cancel_batch_button_text: Cancelar Lote
+      close_batch_button_text: Encerrar Lote
       linked_products: Produtos do Lote
       not_found_message: Não existem produtos vinculados a este lote.
       add_product: Adicionar Produto
