Coluna buyer criada na tabela batches. Novos testes de sistema e traduções pt-BR relacionados a tela de listagem de lotes nos quais o usuário foi o vencedor criados. Mudanças no controller de lotes, nas views de lotes e homepage, nos modelos de lote e usuário

--- a/config/locales/views/batch.pt-BR.yml
+++ b/config/locales/views/batch.pt-BR.yml
@@ -13,6 +13,10 @@ pt-BR:
       prefix: Lote
       expired_title: Lotes Expirados
       expired_title_not_found_message: Não existem lotes expirados.
+    won:
+      prefix: Lote
+      won_title: Lotes Vencidos
+      won_title_not_found_message: Não existem lotes nos quais você foi o vencedor.
     show:
       title: Lote
       creator_description: Administrado por
