--- a/config/locales/views/product.pt-BR.yml
+++ b/config/locales/views/product.pt-BR.yml
@@ -14,7 +14,8 @@ pt-BR:
       without_batch: Não vinculado a um lote
       product_image: Foto
       awaiting_approval: Aguardando aprovação
-      remove_product: Remover Produto
+      expired: Expirado
+      remove_product: Deletar Produto
       link_batch: Vincular Produto a um Lote
       link_batch_button_text: Vincular
       unlink_batch_button_text: Remover Vínculo
