Tabela batches renomeada para lots, pois o nome parece ser mais adequado. Além disso, refatora todo código que utilizava de palavras como batches/batch

--- a/config/locales/models/bid.pt-BR.yml
+++ b/config/locales/models/bid.pt-BR.yml
@@ -9,5 +9,5 @@ pt-BR:
         value_in_centavos: Lance
         user_id: Usuário
         user: Usuário
-        batch_id: Lote
-        batch: Lote
+        lot_id: Lote
+        lot: Lote
