--- a/config/locales/views/product.pt-BR.yml
+++ b/config/locales/views/product.pt-BR.yml
@@ -10,15 +10,15 @@ pt-BR:
       depth: Profundidade
       category: Categoria
       without_category: Não especificado
-      batch: Lote
-      without_batch: Não vinculado a um lote
+      lot: Lote
+      without_lot: Não vinculado a um lote
       product_image: Foto
       awaiting_approval: Aguardando aprovação
       expired: Expirado
       remove_product: Deletar Produto
-      link_batch: Vincular Produto a um Lote
-      link_batch_button_text: Vincular
-      unlink_batch_button_text: Remover Vínculo
+      link_lot: Vincular Produto a um Lote
+      link_lot_button_text: Vincular
+      unlink_lot_button_text: Remover Vínculo
       not_found_message: Este produto não possui uma foto.
     new:
       title: Cadastrar Novo Produto
