--- a/config/locales/models/product.pt-BR.yml
+++ b/config/locales/models/product.pt-BR.yml
@@ -14,6 +14,6 @@ pt-BR:
         depth: Profundidade
         category_id: Categoria
         category: Categoria
-        batch_id: Lote
-        batch: Lote
+        lot_id: Lote
+        lot: Lote
         image: Foto
