--- a/config/locales/views/lot.pt-BR.yml
+++ b/config/locales/views/lot.pt-BR.yml
@@ -1,5 +1,5 @@
 pt-BR:
-  batches:
+  lots:
     index:
       prefix: Lote
       approved_title: Lotes Aprovados
@@ -29,9 +29,9 @@ pt-BR:
       end_date: Data do Fim
       min_bid_in_centavos: Lance Mínimo
       min_diff_between_bids_in_centavos: Diferença Mínima Entre Lances
-      approve_batch_button_text: Aprovar Lote
-      cancel_batch_button_text: Cancelar Lote
-      close_batch_button_text: Encerrar Lote
+      approve_lot_button_text: Aprovar Lote
+      cancel_lot_button_text: Cancelar Lote
+      close_lot_button_text: Encerrar Lote
       linked_products: Produtos do Lote
       not_found_message: Não existem produtos vinculados a este lote.
       add_product: Adicionar Produto
