Status adicionado a tabela products, novos casos de testes de sistema relacionados ao status de um produto criados, controllers e views refatorados, adições de verificações nos models e controllers  para lidar com o status de um produto, novas traduções pt-BR relacionadas ao status de um produto.

--- a/config/locales/models/product.pt-BR.yml
+++ b/config/locales/models/product.pt-BR.yml
@@ -1,4 +1,7 @@
 pt-BR:
+  available: Disponível
+  unavailable: Indisponível
+  sold: Vendido
   activerecord:
     models:
       product:
@@ -17,3 +20,4 @@ pt-BR:
         lot_id: Lote
         lot: Lote
         image: Foto
+        status: Disponibilidade
