Métodos para auxiliar a view a transformar valores em centavos para reais e para ajudar os controllers a transformar reais em centavos criados, adições/mudanças nas traduções pt-BR relacionadas a lances, casos de testes de sistema relacionados a lances refatorados

--- a/config/locales/models/lot.pt-BR.yml
+++ b/config/locales/models/lot.pt-BR.yml
@@ -10,4 +10,6 @@ pt-BR:
         start_date: Data de Início
         end_date: Data do Fim
         min_bid_in_centavos: Lance Mínimo
+        min_bid_in_reais: Lance Mínimo
         min_diff_between_bids_in_centavos: Diferença Mínima Entre Lances
+        min_diff_between_bids_in_reais: Diferença Mínima Entre Lances
