--- a/config/locales/views/lot.pt-BR.yml
+++ b/config/locales/views/lot.pt-BR.yml
@@ -38,8 +38,9 @@ pt-BR:
       add_product_button_text: Adicionar
       bids: Lances
       current_winning_bid: Último lance
-      no_bid_value: '0 centavos' 
+      no_bid_value: 'O lote ainda não recebeu um lance.' 
       make_bid_button_text: Fazer Lance
     new:
       title: Cadastrar Novo Lote
+      value_placeholder: Valor em reais
       submit: 'Cadastrar'
