Testes de sistema relacionados aos lotes e a contas suspensas refatorados e alguns novos casos de testes criados. Pequena adição na tradução pt-BR relacionada aos lotes, pequena mudança no modelo de lances, mudanças nas views, controller para o modelo de cpf bloqueados criado, novo helper paras views relacionados a sessão/usuários

--- a/config/locales/views/lot.pt-BR.yml
+++ b/config/locales/views/lot.pt-BR.yml
@@ -40,6 +40,7 @@ pt-BR:
       current_winning_bid: Último lance
       no_bid_value: 'O lote ainda não recebeu um lance.' 
       make_bid_button_text: Fazer Lance
+      bid_blocked_message: Sua conta não permite fazer lances.
     new:
       title: Cadastrar Novo Lote
       value_placeholder: Valor em reais
