--- a/config/locales/views/lot.pt-BR.yml
+++ b/config/locales/views/lot.pt-BR.yml
@@ -9,6 +9,10 @@ pt-BR:
       approved_progress_not_found_message: Não existem lotes aprovados em andamento.
       approved_waiting_not_found_message: Não existem lotes aprovados preparados para o futuro.
       awaiting_approval_not_found_message: Não existem lotes aguardando aprovação.
+    favorite:
+      prefix: Lote
+      favorite_title: Lotes Favoritos
+      not_found_message: Você não adicionou nenhum lote aos favoritos ainda.
     expired:
       prefix: Lote
       expired_title: Lotes Expirados Aguardando Avaliação
