Novos casos de teste e traduções pt-BR relacionados a lotes favoritos criados, novo método criado no modelo de lotes e mudanças nas views relacionadas a listagem de lostes, sejam favoritos, expirados ou a listagem principal

--- a/config/locales/views/lot.pt-BR.yml
+++ b/config/locales/views/lot.pt-BR.yml
@@ -12,6 +12,8 @@ pt-BR:
     favorite:
       prefix: Lote
       favorite_title: Lotes Favoritos
+      expired_text: Expirado
+      sold_text: Vendido
       not_found_message: Você não adicionou nenhum lote aos favoritos ainda.
     expired:
       prefix: Lote
