Pequena atualização nos testes de sistema e na tradução da tela de show relacionados a CPFs bloqueados

--- a/config/locales/views/blocked_cpf.pt-BR.yml
+++ b/config/locales/views/blocked_cpf.pt-BR.yml
@@ -1,7 +1,7 @@
 pt-BR:
   blocked_cpfs:
     index:
-      title: Bloquear CPF / Listar CPFs Bloqueados
+      title: Bloquear / Desbloquear CPF
       block_cpf_subtitle: Bloquear CPF
       cpf_placeholder: Digite o CPF sem pontuações
       submit: Bloquear
